@@ -6,6 +6,8 @@
   was not rejected, but the inserted data would immediately be discarded at the
   beginning of the next tick. Hence, more consistent to simply require <+ or <~
   for all insertions from outside Bloom rules.
+* Fix bug in join rules whose qualifiers reference collections defined inside
+  imported modules (#301)
 
 == 0.9.6 / 2013-02-25
 
